# awakening-db

./: .gitignore  .goreleaser.yaml  README.md  awakening.db  go.mod  go.sum  main.go  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  schema.sql
src/: main.py
