[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="awakening_database_generator"
authors=[
  {name = "Jason Simmonds", email="jsimmonds@umass.edu"}
]
description="Tool making a Fire Emblem Awakening Database with all the data you need"
readme="README.md"
requires-python=">=3.7"
license = {text = "MIT"}
version="0.0.1"
dependencies=[
  "requests",
  "bs4",
]
